// Copyright 2020 Google LLC. All Rights Reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

package tfx.orchestration;


// Types of placeholder.
enum PlaceholderType {
  INPUT_URI = 0;
  INPUT_VALUE = 1;
  OUTPUT_URI = 2;
  CONST_TEXT = 3;
}

// Placeholder is used to pass values/uris between nodes.
message Placeholder {
  PlaceholderType type = 1;
  string name = 2;
}

// Executor specification for Container based executors.
message ContainerExecutorSpec {
  string image = 1;
  repeated string commands = 2;
  repeated Placeholder args = 3;
}
